# Solana-sc-template

./: .gitignore  README.md
Programs/: Anchor.toml  package.json
Programs/client/: client.js
Programs/programs/account_validate/: Cargo.toml
Programs/programs/account_validate/src/: lib.rs
Programs/programs/basic0/: Cargo.toml
Programs/programs/basic0/src/: lib.rs
Programs/programs/cpi_puppet/: Cargo.toml
Programs/programs/cpi_puppet/src/: lib.rs
Programs/programs/cpi_puppet_master/: Cargo.toml
Programs/programs/cpi_puppet_master/src/: lib.rs
Programs/programs/example-test/: Cargo.toml
Programs/programs/example-test/src/: lib.rs
Programs/programs/logging/: Cargo.toml
Programs/programs/logging/src/: lib.rs
Programs/tests/: account_validate.js  basic-0.js  basic-0.ts  cpi.js  example-test.js
