[package]
name = "logging"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "logging"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
solana-program = "1.9.2"

[dev-dependencies]
solana-program-test = "1.9.2"
solana-sdk = "1.9.2"
